# pytool_compass_lib

./: .gitignore  .pypirc.dist  README.md  demo.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
compass_lib/: enums.py  parser.py  section.py  shot.py
tests/: test_cmds.py  test_read.py
tests/artifacts/: fulford.json  random.json
